Version finale avec bug d'affichage de la version mobile corrigé

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,22 @@ body {
     margin: 0;
 }
 
-/* ==== Header ==== */
+/* ==== HEADER ==== */
 header {
     display: flex;
     align-items: center;
     justify-content: flex-end;
     flex-wrap: wrap;
+    flex-basis: 100%;
+}
+
+.header-logo {
+    margin-right: auto;
+}
+
+#logo {
+    height: 75px;
+    width: 150px;
 }
 
 nav {
@@ -30,28 +40,25 @@ nav a:hover {
 	color:#0065FC;
 }
 
-#logo {
-    margin-right: auto;
-    height: 75px;
-    width: 150px;
-}
+/* === MAIN === */
 
 main {
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
-    padding: 0 20px 0 20px;
 }
 
-/* ===== Section : post header ===== */
+/* == Section : Post-header == */
 #post-header {
     display: flex;
     flex-direction: column;
+    flex-basis: 100%;
+    padding: 20px;
 }
 
 /* ===== titre ===== */
 .box-title-post-header h1 {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
 }
 
@@ -202,6 +209,7 @@ main {
     flex-basis: 100%;
     background-color: white;
     margin-bottom: 50px;
+    padding: 20px;
     gap: 20px;
 }
 
@@ -219,87 +227,6 @@ main {
 
 .titre i {
 	font-size: 25px;
-}
-
-/* ==== Section : hebergement ==== */
-
-#section-hebergement {
-	display: flex;
-    flex-basis: 66%;
-	flex-direction: column;
-	background-color:#F2F2F2;
-	border-radius: 15px;
-    padding-left: 20px;
-}
-
-.hebergement-global {
-	display: flex;
-	flex-direction: column;
-    justify-content: center;
-	margin-right: 20px;
-}
-
-.hebergement-section {
-	display: flex;
-	flex-direction: row;
-    justify-content: space-between;
-    align-items :center;
-	padding: 10px;
-    flex-basis: 100%;
-}
-
-.hotel-hebergement {
-	display: flex;
-	flex-direction: column;
-	padding: 5px;
-  	background-color: white;
-	border-radius: 20px;
-    flex-basis: 33%;
-	max-height: 230px;
-	margin: 20px;
-  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(133, 15, 15, 0.19);
-}
-
-.hotel-hebergement a {
-	text-decoration: none;
-	color: black;
-}
-
-.hotel-hebergement img {
-	object-fit: cover;
-	margin: 0;
-	border-radius: 20px 20px 0 0;
-	height: 120px;
-	width: 100%;
-}
-
-.hotel-hebergement-info {
-    padding: 10px;
-}
-
-.hotel-hebergement-info h3 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-}
-
-.hotel-hebergement-info p {
-    font-size: 13px;
-    margin: 0;
-}
-
-
-.hebergement-afficher-plus {
-	margin-left: 40px;
-}
-
-.hebergement-afficher-plus a {
-	text-decoration: none;
-	color: black;
-}
-
-.economie-gras {
-    font-weight: bold;
 }
 
 /* ==== Section populaire ==== */
@@ -382,12 +309,92 @@ main {
     color: #D9D9D9;
 }
 
+/* ==== Section : hebergement ==== */
+
+#section-hebergement {
+	display: flex;
+    flex-basis: 66%;
+	flex-direction: column;
+	background-color:#F2F2F2;
+	border-radius: 15px;
+}
+
+.hebergement-global {
+	display: flex;
+	flex-direction: column;
+    justify-content: center;
+	margin-right: 20px;
+}
+
+.hebergement-section {
+	display: flex;
+	flex-direction: row;
+    justify-content: space-between;
+    align-items :center;
+	padding: 10px;
+    flex-basis: 100%;
+}
+
+.hotel-hebergement {
+	display: flex;
+	flex-direction: column;
+	padding: 5px;
+  	background-color: white;
+	border-radius: 20px;
+    flex-basis: 33%;
+	max-height: 230px;
+	margin: 20px;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(133, 15, 15, 0.19);
+}
+
+.hotel-hebergement a {
+	text-decoration: none;
+	color: black;
+}
+
+.hotel-hebergement img {
+	object-fit: cover;
+	margin: 0;
+	border-radius: 20px 20px 0 0;
+	height: 120px;
+	width: 100%;
+}
+
+.hotel-hebergement-info {
+    padding: 10px;
+}
+
+.hotel-hebergement-info h3 {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.hotel-hebergement-info p {
+    font-size: 13px;
+    margin: 0;
+}
+
+
+.hebergement-afficher-plus {
+	margin-left: 40px;
+}
+
+.hebergement-afficher-plus a {
+	text-decoration: none;
+	color: black;
+}
+
+.economie-gras {
+    font-weight: bold;
+}
 /* ===== Section : Activite ===== */
 #section-activites {
 	display: flex;
 	flex-basis: 100%;
 	flex-direction: column;
 	margin-bottom: 50px;
+    padding: 20px;
 }
 
 .activites-global {
@@ -501,7 +508,7 @@ main {
 	color: black;
 }
 
- /* ===== footer ===== */
+/* === FOOTER === */
 footer {
 	display: flex;
 	flex-direction: row;
@@ -533,3 +540,4 @@ footer {
 	color: black;
 	padding: 5px;
 }
+
