--- a/css/styles_tablette.css
+++ b/css/styles_tablette.css
@@ -1,3 +1,7 @@
+main {
+    padding: 0;
+}
+
 .bloc-filtre {
     display: flex;
     flex-wrap: wrap;
@@ -23,10 +27,6 @@
     flex-basis: 100%;
 }
 
-.populaire-global {
-	margin: 30px;
-}
-
 /* ==== Section : hebergement ===== */
 #section-hebergement {
 	display: flex;
@@ -34,7 +34,6 @@
     flex-basis: 100%;
 	background-color:#F2F2F2;
 	border-radius: 15px;
-    padding-left: 20px;
 }
 
 /* ===== Section : activites ===== */
@@ -62,7 +61,7 @@
 }
 
 
-/* ==== footer ===== */
+/* ==== FOOTER ===== */
 footer {
     display: flex;
     flex-basis: 100%;
